# Hexes-Color-Picker

./: .gitignore  CMakeLists.txt  CMakePresets.json  ColorPicker.pro  README.md  icon.icns  icon.psd
src/: main.cpp  resources.qrc
src/assets/: colors.json  style.qss
src/gui/: actionBar.h  colorFinderWidget.cpp  colorFinderWidget.h  colorPreviewWidget.cpp  colorPreviewWidget.h  imagePreviewWidget.h  mainWidget.cpp  mainWidget.h  widgetFactory.cpp  widgetFactory.h
src/utilities/: colorSpace.cpp  colorSpace.h
